# Lindsey

./: CMakeLists.txt  README.md  error.csv  mainpage.dox  manifest.xml
launch/: EKF.launch  Experiment.launch  Filtering.launch  Joy.launch  Quuppa.launch  Test.launch  camshift.launch  drone.launch  roomba.launch  vicon.launch
msg/: AzTag.msg  Tag.msg
src/: AZ_sim.cpp  AZ_sim.cpp~  Drone_controller.cpp  Drone_test.cpp  Point2Point.cpp  Quuppa_AZ.cpp  Quuppa_AZ.cpp~  Quuppa_decode.cpp  Roomba_test.cpp  Rotate_uav_trackee.cpp  Tank.h  camshift_node.py  csv_listener.cpp  drone_track_roi.cpp  json_decode.cpp  kalman.cpp  kalman.cpp~  kalman.h  orient.cpp  rotate_tag.cpp  tf_from_odom.cpp  udp.cpp
src/Lindsey/msg/: _AZTag.py  _Tag.py
